Add CLI options for including pointer/decorations

BUG: 425995